Minor adjustments to avoid post controls overlapping post container + slightly increase font size

--- a/styles/chat.css
+++ b/styles/chat.css
@@ -2,7 +2,6 @@ body {
   background: black;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 10pt;
 }
 
 .chatContainer {
